add license, vsix package, screenshots and lauch config for vs code

--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "theme-bluloco-dark-plus",
-  "displayName": "bluloco-dark+",
-  "description": "A fancy but yet sophisticated dark designer color scheme.",
-  "version": "2.0.1",
-  "publisher": "Compilenix",
-  "author": {
-    "email": "Compilenix@gmail.com",
-    "name": "Compilenix",
-    "url": "https://compilenix.org/"
-  },
-  "contributors": [
-    {
-      "name": "Umut Topuzoğlu",
-      "email": "uloco@schiefewelt.de",
-      "url": "https://github.com/uloco"
+    "name": "theme-bluloco-dark-plus",
+    "displayName": "bluloco-dark+",
+    "description": "A fancy but yet sophisticated dark designer color scheme.",
+    "version": "2.0.1",
+    "publisher": "Compilenix",
+    "author": {
+        "email": "Compilenix@gmail.com",
+        "name": "Compilenix",
+        "url": "https://compilenix.org/"
+    },
+    "contributors": [{
+        "name": "Umut Topuzoğlu",
+        "email": "uloco@schiefewelt.de",
+        "url": "https://github.com/uloco"
+    }],
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/compilenix/theme-bluloco-dark-plus/issues"
+    },
+    "icon": "icon.png",
+    "engines": {
+        "vscode": "^1.15.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/compilenix/theme-bluloco-dark-plus"
+    },
+    "contributes": {
+        "themes": [{
+            "label": "Bluloco Dark+",
+            "uiTheme": "vs-dark",
+            "path": "./themes/bluloco-dark-plus-color-theme.json"
+        }]
     }
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/compilenix/theme-bluloco-dark-plus/issues"
-  },
-  "icon": "icon.png",
-  "engines": {
-    "vscode": "^1.10.0"
-  },
-  "categories": [
-    "Themes"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/compilenix/theme-bluloco-dark-plus"
-  },
-  "contributes": {
-    "themes": [
-      {
-        "label": "Bluloco Dark+",
-        "uiTheme": "vs-dark",
-        "path": "./themes/bluloco-dark-plus-color-theme.json"
-      }
-    ]
-  }
 }
